chore: Update .env files to use placeholder API keys

--- a/SITCHATBOTLLM/.env
+++ b/SITCHATBOTLLM/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY="your_openai_api_key_here"
