feat: Update environment configuration by adding HOST, PORT, and RAG_BASE_URL in backend .env files

--- a/SIT-chatbot-main/backend/.env
+++ b/SIT-chatbot-main/backend/.env
@@ -1,3 +1,12 @@
-OPENAI_API_KEY="your_openai_api_key_here"
-ELEVENLABS_API_KEY="your_elevenlabs_api_key_here"
+# Node will bind only to localhost (Nginx handles public requests)
+HOST=127.0.0.1
+PORT=3000
+
+# FastAPI backend URL (internal)
 RAG_BASE_URL=http://127.0.0.1:8000
+
+# Required for OpenAI API calls
+OPENAI_API_KEY="your_openai_api_key_here"
+
+# Optional — only needed if you use ElevenLabs speech features
+ELEVENLABS_API_KEY="your_elevenlabs_api_key_here"
