--- a/SIT-chatbot-main/backend/.env
+++ b/SIT-chatbot-main/backend/.env
@@ -5,8 +5,5 @@ PORT=3000
 # FastAPI backend URL (internal)
 RAG_BASE_URL=http://127.0.0.1:8000
 
-# Required for OpenAI API calls
-OPENAI_API_KEY="your_openai_api_key_here"
-
-# Optional — only needed if you use ElevenLabs speech features
+# Required for ElevenLabs speech features
 ELEVENLABS_API_KEY="your_elevenlabs_api_key_here"
