--- a/SIT-chatbot-main/backend/.env
+++ b/SIT-chatbot-main/backend/.env
@@ -6,4 +6,4 @@ PORT=3000
 RAG_BASE_URL=http://127.0.0.1:8000
 
 # Required for ElevenLabs speech features
-ELEVENLABS_API_KEY=sk_b612d366c55d8c4659c7f2bed1db25897303bddffdaa5d7f 
+ELEVENLABS_API_KEY="your_elevenlabs_api_key_here" 
