--- a/SIT-chatbot-main/package.json
+++ b/SIT-chatbot-main/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "form-data": "^4.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "undici": "^7.13.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
